fix tweet container overlapping when long strings are entered. Set counter to update back to black on < 140 chars.

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -55,6 +55,11 @@ article.tweet footer {
   color: #c7a15b;
 }
 
+/* prevents bug with long strings */ 
+.tweet-text {
+  word-wrap: break-word;
+}
+
 
 @media only screen and (min-width:1024px) {
   .container {
@@ -64,7 +69,7 @@ article.tweet footer {
     margin-top: 250px;
   }
 
-  .tweets-container {
+  #tweets-container {
     width: 60%;
     margin-right: 1.5em;
     float: right;
